[package]
name = "oauth1-header"
version = "0.1.0"
authors = ["Jonathan Reyes <j@jreyes.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.0"
hmac = "0.7.1"
percent-encoding = "2.1.0"
rand = "0.7.3"
sha-1 = "0.8.2"
