[package]
name = "oauth1-header"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
readme = "README.md"
description = "Generate OAuth 1.0 Authorization headers."
documentation = "https://github.com/jreyes33/oauth1-header"
homepage = "https://github.com/jreyes33/oauth1-header"
repository = "https://github.com/jreyes33/oauth1-header"
authors = ["Jonathan Reyes <j@jreyes.org>"]
keywords = ["oauth1", "oauth", "authorization", "header"]
categories = ["authentication", "web-programming"]

[dependencies]
base64 = "0.12.0"
hmac = "0.7.1"
percent-encoding = "2.1.0"
rand = "0.7.3"
sha-1 = "0.8.2"
